--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1018,7 +1018,7 @@
         padding: 4rem 10rem;
 
         @include md {
-            padding: 4rem 3rem;
+            padding: 4rem 5px;
         }
     }
 
@@ -1097,7 +1097,10 @@
         padding: 36px 22px 22px;
 
         @include md {
-            padding: 30px 20px 20px;
+            padding: 36.5px 20px 20px;
+            width: 280px;
+            height: 300px;
+            margin: 0 auto;
         }
 
         position: relative;
@@ -1112,12 +1115,12 @@
             font-size: 18px;
             font-weight: 700;
             text-align: center;
-            padding-bottom: 1.2rem;
-            border-bottom: 1px solid #008080;
+            padding: 0 0.4rem 1.4rem 0.4rem;
+            border-bottom: 2px solid rgba(0, 128, 128, 0.3);
         }
 
         p {
-            margin-top: 1.2rem;
+            margin-top: 12px;
             color: #003d3d;
             font-size: 16px;
             line-height: 1.55;
@@ -1134,10 +1137,6 @@
     &__step-icon {
         width: auto;
         height: 66px;
-
-        @include md {
-            height: 80px;
-        }
     }
 
     &__step-arrow {
@@ -1165,7 +1164,9 @@
         display: flex;
         align-items: center;
         gap: 2rem;
-
+        @include md {
+            align-items: flex-start;
+        }
         p {
             color: #003d3d;
             font-size: 2rem;
@@ -1241,6 +1242,9 @@
             font-size: 16px;
             font-weight: 400;
             line-height: 1.45;
+            @include md {
+                font-size: 15px;
+            }
         }
     }
 
